--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^5.0.2"
 requests = "^2.31.0"
 python-dotenv = "^1.0.1"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
