--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.2"
 requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 djangorestframework = "^3.14.0"
+django-debug-toolbar = "^4.3.0"
 
 
 [build-system]
