--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 djangorestframework = "^3.14.0"
 django-debug-toolbar = "^4.3.0"
+pillow = "^10.2.0"
 
 
 [build-system]
