--- a/Dev/_server/.env.example
+++ b/Dev/_server/.env.example
@@ -1,3 +1,3 @@
 ASSET_URL=http://localhost:5173
 FILE_EXTENSION=png
-VAULT_PATH=/static/
+VAULT_PATH=**ABSOLUTE PATH FOR YOUR COMPUTER**/cupid_code/Dev/_server/core/static/
