--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -16,6 +16,8 @@ pillow = "^10.2.0"
 geopy = "^2.4.1"
 geoip2 = "^4.8.0"
 yelpapi = "^2.5.1"
+speechrecognition = "^3.10.1"
+pocketsphinx = "^5.0.3"
 
 
 [build-system]
