--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -18,6 +18,8 @@ geoip2 = "^4.8.0"
 yelpapi = "^2.5.1"
 speechrecognition = "^3.10.1"
 pocketsphinx = "^5.0.3"
+torch = "^2.2.1"
+transformers = "^4.38.2"
 
 
 [build-system]
