--- a/Dev/pyproject.toml
+++ b/Dev/pyproject.toml
@@ -20,6 +20,8 @@ speechrecognition = "^3.10.1"
 pocketsphinx = "^5.0.3"
 torch = "^2.2.1"
 transformers = "^4.38.2"
+twilio = "^9.0.0"
+sendgrid = "^6.11.0"
 
 
 [build-system]
