--- a/Code/client/package.json
+++ b/Code/client/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.6.7",
     "cookie": "^0.6.0",
     "vue": "^3.4.20",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-html2pdf": "^1.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "sass": "^1.74.1",
     "vite": "^5.1.0"
   }
 }
